add basic demo for ntp

--- a/ntp_basic/etc/ntp.conf
+++ b/ntp_basic/etc/ntp.conf
@@ -16,12 +16,27 @@ restrict ::1
 # Hosts on local network are less restricted.
 #restrict 192.168.1.0 mask 255.255.255.0 nomodify notrap
 
+# by yangsg: 允许网段192.168.175.0/24网段的主机来同步时间
+restrict 192.168.175.0 mask 255.255.255.0 nomodify notrap
+
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
+server 0.cn.pool.ntp.org iburst
+server 1.cn.pool.ntp.org iburst
+server 2.cn.pool.ntp.org iburst
+server 3.cn.pool.ntp.org iburst
+
 server 0.centos.pool.ntp.org iburst
 server 1.centos.pool.ntp.org iburst
 server 2.centos.pool.ntp.org iburst
 server 3.centos.pool.ntp.org iburst
+
+
+
+
+# 将本机设置为时间源
+server 127.127.1.0 iburst
+fudge 127.127.1.0  stratum 10
 
 #broadcast 192.168.1.255 autokey	# broadcast server
 #broadcastclient			# broadcast client
