--- a/ntp_chrony_basic/ntp7server/etc/chrony.conf
+++ b/ntp_chrony_basic/ntp7server/etc/chrony.conf
@@ -1,9 +1,19 @@
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-server 0.centos.pool.ntp.org iburst
-server 1.centos.pool.ntp.org iburst
-server 2.centos.pool.ntp.org iburst
-server 3.centos.pool.ntp.org iburst
+#server 0.centos.pool.ntp.org iburst
+#server 1.centos.pool.ntp.org iburst
+#server 2.centos.pool.ntp.org iburst
+#server 3.centos.pool.ntp.org iburst
+
+# http://www.ntp.org.cn/pool.php
+# https://help.aliyun.com/document_detail/92704.html
+server ntp1.aliyun.com iburst
+server ntp2.aliyun.com iburst
+server ntp3.aliyun.com iburst
+server ntp4.aliyun.com iburst
+server ntp5.aliyun.com iburst
+server ntp6.aliyun.com iburst
+server ntp7.aliyun.com iburst
 
 # Record the rate at which the system clock gains/losses time.
 driftfile /var/lib/chrony/drift
@@ -23,10 +33,10 @@ rtcsync
 #minsources 2
 
 # Allow NTP client access from local network.
-#allow 192.168.0.0/16
+allow 192.168.175.0/24
 
 # Serve time even if not synchronized to a time source.
-#local stratum 10
+local stratum 10
 
 # Specify file containing keys for NTP authentication.
 #keyfile /etc/chrony.keys
