--- a/httpd/httpd01_server_basic/httpd7server/etc/httpd/conf/httpd.conf
+++ b/httpd/httpd01_server_basic/httpd7server/etc/httpd/conf/httpd.conf
@@ -55,6 +55,15 @@ Listen 80
 #
 Include conf.modules.d/*.conf
 
+
+#启用长连接
+KeepAlive On
+#长连接的超时时间，单位秒；支持ms
+KeepAliveTimeout 5
+#长连接传输文件的次数
+MaxKeepAliveRequests 100
+
+
 #
 # If you wish httpd to run as a different user or group, you must run
 # httpd as root initially and it will switch.  
@@ -83,7 +92,7 @@ Group apache
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin root@localhost
+ServerAdmin 12345@qq.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -123,8 +132,7 @@ DocumentRoot "/var/www/html"
 #
 <Directory "/var/www">
     AllowOverride None
-    # Allow open access:
-    Require all granted
+    Require all denied
 </Directory>
 
 # Further relax access to the default document root:
@@ -141,7 +149,7 @@ DocumentRoot "/var/www/html"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options None
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
@@ -153,7 +161,7 @@ DocumentRoot "/var/www/html"
     #
     # Controls who can get stuff from this server.
     #
-    Require all granted
+    Require all denied
 </Directory>
 
 #
@@ -186,7 +194,7 @@ ErrorLog "logs/error_log"
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel error
 
 <IfModule log_config_module>
     #
@@ -357,3 +365,6 @@ EnableSendfile on
 #
 # Load config files in the "/etc/httpd/conf.d" directory, if any.
 IncludeOptional conf.d/*.conf
+
+IncludeOptional sites-enabled/*.conf
+
