--- a/httpd/httpd01_server_basic/httpd7server/etc/httpd/conf/httpd.conf
+++ b/httpd/httpd01_server_basic/httpd7server/etc/httpd/conf/httpd.conf
@@ -102,6 +102,8 @@ ServerAdmin 12345@qq.com
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 #ServerName www.example.com:80
+#ServerName 127.0.0.1:80
+ServerName 192.168.175.10:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
