update files about ip based conf

--- a/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip01.based.com.conf
+++ b/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip01.based.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost 192.168.175.10:80>
     ServerName     ip01.based.com
     DocumentRoot   /var/www/ip01.based.com
     ErrorLog       /var/log/httpd/ip01.based.com/error.log
