--- a/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip02.based.com.conf
+++ b/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip02.based.com.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost 192.168.175.20:80>
     ServerName     ip02.based.com
     DocumentRoot   /var/www/ip02.based.com
     ErrorLog       /var/log/httpd/ip02.based.com/error.log
