--- a/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip02.based.com.conf
+++ b/httpd/httpd01_server_basic/httpd7server/etc/httpd/sites-available/ip02.based.com.conf
@@ -1,4 +1,13 @@
 <VirtualHost 192.168.175.20:80>
+# warning:
+#     don't use 'ip-based vhosts'(eg: <VirtualHost 192.168.175.10:80>) together with the 'name-based vhosts' of which
+#     ip specified by wildcard '*'(eg: <VirtualHost *:80>), becase
+#     Name-based virtual hosting is a process applied after the server has selected the best matching IP-based virtual host.
+#     and
+#     the wildcard (*) matches are considered only when there are no exact matches for the address and port.
+#     otherwise, your 'name-based vhosts'(eg: <VirtualHost *:80>) will never serve the client on the same ip:port as the
+#     'ip-based vhosts'(eg: <VirtualHost 192.168.175.10:80>)
+# for more details: https://httpd.apache.org/docs/2.4/en/vhosts/details.html
     ServerName     ip02.based.com
     DocumentRoot   /var/www/ip02.based.com
     ErrorLog       /var/log/httpd/ip02.based.com/error.log
