--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
@@ -1,6 +1,10 @@
 
 #user  nobody;
-worker_processes  1;
+
+# 启动worker进程的数量
+# 对于cpu密集型，建议 worker_processes 数量与cpu个数一致
+# 如果是IO密集型，如响应大量客户端，worker_processes 个数为cpu个数的2倍
+worker_processes  10;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -9,15 +13,27 @@ worker_processes  1;
 #pid        logs/nginx.pid;
 
 
+# http://nginx.org/en/docs/stream/ngx_stream_core_module.html
 events {
-    worker_connections  1024;
+
+    #// http://nginx.org/en/docs/ngx_core_module.html#use
+    #// epoll — efficient method used on Linux 2.6+.
+    #// use epoll; 其实不用明确指定，因为默认nginx采用的就是epoll
+    use epoll;
+
+    #// http://nginx.org/en/docs/ngx_core_module.html#worker_connections
+    #// 设置一个 a worker process 能打开的最大的并发连接数
+    #// 但实际的并发连接数无法超过当前可打开文件最大数的限制,不过可以通过worker_rlimit_core
+    #// 来修改这个限制，见 http://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
+    worker_connections  65535;
 }
 
 
 http {
-    include       mime.types;
+    include       mime.types;      #// /app/nginx/conf/mime.types
     default_type  application/octet-stream;
 
+    #// http://nginx.org/en/docs/varindex.html
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
