correct some words

--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -119,7 +119,7 @@
 #// http://nginx.org/en/docs/http/ngx_http_core_module.html#location
 #// 特别注意：(一个很奇怪的nginx的特性)
 #//     针对proxy_pass, fastcgi_pass, uwsgi_pass, scgi_pass, memcached_pass,or grpc_pass,
-#//     prefix string是否带有结尾的斜线符号'/'是否区别的
+#//     prefix string是否带有结尾的斜线符号'/'是有区别的
 #//
 #//  If a location is defined by a prefix string that ends with the slash character,
 #//  and requests are processed by one of
