--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
@@ -160,6 +160,146 @@
 
 
 
+#// -------------------------------------------------------------------------------
+#// http://nginx.org/en/docs/http/request_processing.html
+#//   How nginx processes a request
+#//   --------------------------------------------
+#//   Name-based virtual servers
+#//   如下例子的3个server block中:
+#//       server {  #// 该server为80端口的default server, 因其在配置文件中的最先(第一个)被定义
+#//           listen      80;
+#//           server_name example.org www.example.org;
+#//           ...
+#//       }
+#//
+#//       server {
+#//           listen      80;
+#//           server_name example.net www.example.net;
+#//           ...
+#//       }
+#//
+#//       server {
+#//           listen      80;
+#//           server_name example.com www.example.com;
+#//           ...
+#//       }
+#//
+#//   按如上例子的配置,nginx只会检查 request’s header field “Host”
+#//   如果这个请求头字段"Host"的值没有匹配到任何server name, 或者request中
+#//   不包含任何header field信息，nginx会将request路由到针对该port的default server上，
+#//   按上面例子的配置，这个default server就是the first one, 此为nginx的默认行为，当然，
+#//   也可以显示的设定某个server为default server,这可以通过在listen指定中指定default_server
+#//   参数来实现,如下：
+#//            server {
+#//                listen      80 default_server;
+#//                server_name example.net www.example.net;
+#//                ...
+#//            }
+#//   --------------------------------------------
+#//
+#//   How to prevent processing requests with undefined server names
+#//  如果没有带the “Host” header field的request是不允许的，一个只是简单drop该request的server可以
+#//  按如下定义：
+#//       server {
+#//           listen      80;
+#//           server_name "";   #// 这里empty string(即"")可以匹配没有the “Host” header field的request
+#//           return      444;  #// 为了closes the connection,返回了一个nginx特有的而非标准的状态码 444
+#//       }
+#//
+#//
+#//   --------------------------------------------
+#//
+#//   Mixed name-based and IP-based virtual servers
+#//
+#//   让我们看一个更加复杂的配置，这个配置中多个 virtual servers 监听在不同的地址上: 
+#//          server {
+#//              listen      192.168.1.1:80;
+#//              server_name example.org www.example.org;
+#//              ...
+#//          }
+#//
+#//          server {
+#//              listen      192.168.1.1:80;
+#//              server_name example.net www.example.net;
+#//              ...
+#//          }
+#//
+#//          server {
+#//              listen      192.168.1.2:80;
+#//              server_name example.com www.example.com;
+#//              ...
+#//          }
+#//
+#//   在如上配置中，nginx将按server blocks中的listen指令来对request中的ip和port进行检测，然后根据ip:port匹配
+#//   成功的server blocks中的server_name entries来对request中的the “Host” header field进行检测,如果没有找到能
+#//   匹配的server name, 则该request被转交给default server处理，For example, a request for www.example.com
+#//   received on the 192.168.1.1:80 port will be handled by the default server of the 192.168.1.1:80 port,
+#//   i.e., by the first server, since there is no www.example.com defined for this port.
+#//
+#//    As already stated, a default server is a property of the listen port,
+#//    and different default servers may be defined for different ports:
+#//        server {
+#//            listen      192.168.1.1:80;
+#//            server_name example.org www.example.org;
+#//            ...
+#//        }
+#//
+#//        server {
+#//            listen      192.168.1.1:80 default_server;
+#//            server_name example.net www.example.net;
+#//            ...
+#//        }
+#//
+#//        server {
+#//            listen      192.168.1.2:80 default_server;
+#//            server_name example.com www.example.com;
+#//            ...
+#//        }
+#//
+#//
+#//   --------------------------------------------
+#//
+#//   A simple PHP site configuration
+#//
+#//   Now let’s look at how nginx chooses a location to process a request for a typical, simple PHP site:
+#//        server {
+#//            listen      80;
+#//            server_name example.org www.example.org;
+#//            root        /data/www;
+#//
+#//            location / {
+#//                index   index.html index.php;
+#//            }
+#//
+#//            location ~* \.(gif|jpg|png)$ {
+#//                expires 30d;
+#//            }
+#//
+#//            location ~ \.php$ {
+#//                fastcgi_pass  localhost:9000;
+#//                fastcgi_param SCRIPT_FILENAME
+#//                              $document_root$fastcgi_script_name;
+#//                include       fastcgi_params;
+#//            }
+#//        }
+#//
+#//  nginx first searches for the most specific prefix location given by literal strings regardless of the listed order.
+#//  In the configuration above the only prefix location is “/” and since it matches any request it will
+#//  be used as a last resort. Then nginx checks locations given by regular expression in the order listed
+#//  in the configuration file. The first matching expression stops the search and nginx will use this location.
+#//  If no regular expression matches a request, then nginx uses the most specific prefix location found earlier.
+#//
+#//   Note that locations of all types test only a URI part of request line without arguments.
+#//   This is done because arguments in the query string may be given in several ways, for example:
+#//       /index.php?user=john&page=1
+#//       /index.php?page=1&user=john
+#//
+#//    Besides, anyone may request anything in the query string:
+#//      /index.php?page=1&something+else&user=john
+#//
+#//    最后的一些内容，参考 http://nginx.org/en/docs/http/request_processing.html
+#//
+
 
 
 
