--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -88,7 +88,8 @@
 
 
 #// 效果有点类似于bash中对grep命令的这种使用: echo '/switchbreak/aaaaaaaaa' | grep -E '^/switchbreak/'
-#// ^~ 还有种类似于一些程序语言中switch语句块加了一条break语句的效果(即执行break后立即结束对其他后续语句的处理)
+#// ^~ 还有种类似于一些程序语言中switch语句块加了一条break语句的效果(即执行break后立即结束对其他后续语句的处理,
+#// 而^~会结束后续正则表达式的检查)
 #// If the longest matching prefix location has the “^~” modifier then regular expressions are not checked.
         location ^~ /switchbreak/ {
            return 200 "location ^~ /switchbreak/";
