--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -12,7 +12,8 @@
 #// Default:  —
 #// Context:  server, location
 #//
-#//  注：= ^~ 匹配到后会立刻结束后续其他匹配, ~ ~* 用于正则匹配, 如果什么符号都没加，则默认default为简单的文本包含查找
+#//  注：= 匹配到后会立刻结束后续其他匹配, ^~ 匹配到后会不再对后续的正则表达式做检查,
+#//      ~ ~* 用于正则匹配, 如果什么符号都没加，则默认default为简单的文本包含查找
 #//
 #//  为了能查找匹配给定request的location, nginx首先检查以prefix strings定义的locations(即(prefix locations)),
 #//  在这些成功匹配的locations之中，具有最长匹配prefix的location会被选中和被记住，
