--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
@@ -44,9 +44,10 @@ http {
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    keepalive_timeout  65;
+    keepalive_timeout  30;
+    keepalive_requests 100;
 
-    #gzip  on;
+    gzip  on; #启用压缩功能
 
     server {
         listen       80;
@@ -130,4 +131,5 @@ http {
     #    }
     #}
 
+    include /app/nginx/sites-enabled/*.conf;
 }
