--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/ip02.based.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/ip02.based.com.conf
@@ -1,3 +1,4 @@
+#// filepath: /app/nginx/sites-available/ip02.based.com.conf
 server {
     listen       192.168.175.242:80;
     server_name  www.ip02.based.com
