--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/name03.with.ip.as.servername.based.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/name03.with.ip.as.servername.based.com.conf
@@ -4,7 +4,7 @@ server {
     server_name  www.name03.with.ip.as.servername.based.com
                  name03.with.ip.as.servername.based.com
                  *.name03.with.ip.as.servername.based.com
-                 192.168.175.10;
+                 192.168.175.10;  #注意：这个例子中使用了ip作为server_name
 
     error_log    /app/nginx/logs/name03.with.ip.as.servername.based.com/error.log error;
     access_log   /app/nginx/logs/name03.with.ip.as.servername.based.com/access.log main;
