--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/conf/nginx.conf
@@ -34,11 +34,11 @@ http {
     default_type  application/octet-stream;
 
     #// http://nginx.org/en/docs/varindex.html
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -50,15 +50,16 @@ http {
     gzip  on; #启用压缩功能
 
     server {
-        listen       80;
-        server_name  localhost;
+        listen       80; #// http://nginx.org/en/docs/http/ngx_http_core_module.html#listen
+        server_name  127.0.0.1;
 
         #charset koi8-r;
 
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
+#// http://nginx.org/en/docs/http/ngx_http_core_module.html#root
+            root   html; #// 资源路径root +  uri
             index  index.html index.htm;
         }
 
