--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/access.auth.basic.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/access.auth.basic.demo.com.conf
@@ -20,6 +20,9 @@ server {
 
 
 #// 服务器端
+#// 查看包含htpasswd的软件包是否安装,如未安装，执行 `yum -y install httpd-tools` 后用 `type htpasswd` 验证
+#// [root@nginx7server ~]# rpm -q httpd-tools
+#//
 #// [root@nginx7server ~]# htpasswd --help
 #// 警告：-c只能在创建第一个user时能被使用，否则会截断既有文件，造成所有现有用户信息丢失
 #// [root@nginx7server ~]# htpasswd -c /app/nginx/conf/.webuser Bob
