--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -29,11 +29,13 @@
 
 #//  ~*  匹配正则表达式(不区分大小写)
         location ~* ^/regular_expression_case-insensitive_match {
+          default_type text/plain;
           return 200 "Regular expressions are specified with the preceding “~*” modifier (for case-insensitive matching)";
         }
 
 #//  ~  匹配正则表达式(区分大小写)
         location ~ ^/regular_expression_case-sensitive_match {
+          default_type text/plain;
           return 200 "the “~” modifier (for case-sensitive matching)";
         }
 
@@ -44,6 +46,7 @@
 #//  2. 解析路径中相对路径(如'.'或'..')
 #//  3. 将毗邻的多个斜线(如'///////')压缩为一个斜线(即'/')
         location = /normalize/uri/ {
+          default_type text/plain;
           return 200 "location = /normalize/uri/";
 #// [root@client ~]# curl 'http://location.match.demo.com/////////////normalize/uri///////////////////////'
 #// [root@client ~]# curl 'http://location.match.demo.com/////////////normalize/uri/dir01/dir02/../..//////////////////////'
@@ -53,6 +56,7 @@
 #// 如果精确匹配一旦被找到，则search过程会立刻结束(If an exact match is found, the search terminates.)
 #// 如果某个固定的uri经常大量频繁的被客户端请求，则使用'='这种方式可以加速server端请求的处理过程
         location = / {
+           default_type text/plain;
            return 200 "location = /";
 #// 测试用例：
 #// [root@client ~]# curl http://location.match.demo.com/
@@ -60,6 +64,7 @@
         }
 
         location / {
+           default_type text/plain;
            return 200 "location /";
 #// 测试用例：
 #// [root@client ~]# curl http://location.match.demo.com/aaaaaa
@@ -70,6 +75,7 @@
         }
 
         location /documents/ {
+           default_type text/plain;
            return 200 "location /documents/";
 
 #// 测试用例：
@@ -79,6 +85,7 @@
 
 #// 区分大小写的正则匹配 (类似bash中的grep命令, 如：echo 'aaaa/pattern/aaaa'  | grep '/pattern')
         location ~ /pattern {
+           default_type text/plain;
            return 200 "location ~ /pattern/";
 #// 测试用例：
 #// [root@client ~]#  curl http://location.match.demo.com/pattern
@@ -93,6 +100,7 @@
 #// 而^~会结束后续正则表达式的检查)
 #// If the longest matching prefix location has the “^~” modifier then regular expressions are not checked.
         location ^~ /switchbreak/ {
+           default_type text/plain;
            return 200 "location ^~ /switchbreak/";
 #// 测试用例：
 #// [root@client ~]#  curl 'http://location.match.demo.com/switchbreak/'
