update readme.txt and nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf

--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -127,7 +127,7 @@
 
 #// ------------------------------------------------------------
 #// http://nginx.org/en/docs/http/ngx_http_core_module.html#location
-#// 特别注意：(一个很奇怪的nginx的特性)
+#// 特别注意：
 #//     针对proxy_pass, fastcgi_pass, uwsgi_pass, scgi_pass, memcached_pass,or grpc_pass,
 #//     prefix string是否带有结尾的斜线符号'/'是否区别的
 #//
@@ -139,17 +139,11 @@
 #//  the requested URI with the slash appended. If this is not desired,
 #//  an exact match of the URI and location could be defined like this:
 
-
-#//  浏览器访问 http://location.match.demo.com/user/ ,
-#//  则nginx会将内容 http://192.168.175.20/user/index.html的内容返回
-        location /user/ {  #//  此处完成的是反向代理功能
+        location /user/ {
           proxy_pass http://192.168.175.20;
         }
 
-#// 如下，浏览器访问 http://location.match.demo.com/user  时，
-#// 将被永久重定向到http://location.match.demo.com/user/ 这个新地址
-#//(301 Moved Permanently)  http://location.match.demo.com/user/
-        location = /user { #// 此处完成的是重定向功能，且注意不是重定向到http://192.168.175.20/user, 而是重定向到了http://location.match.demo.com/user/
+        location = /user {
           proxy_pass http://192.168.175.20;
         }
 
