--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/location.match.demo.com.conf
@@ -1,7 +1,8 @@
 #// http://nginx.org/en/docs/http/ngx_http_core_module.html#location
-    server {
-        listen       80;
-        server_name  location.match.demo.com;
+#// https://artfulrobot.uk/blog/untangling-nginx-location-block-matching-algorithm
+server {
+    listen       80;
+    server_name  location.match.demo.com;
 
 #// [root@nginx7server ~]# /app/nginx/sbin/nginx -t    #// 检查配置的语法
 
@@ -28,16 +29,16 @@
 
 
 #//  ~*  匹配正则表达式(不区分大小写)
-        location ~* ^/regular_expression_case-insensitive_match {
-          default_type text/plain;
-          return 200 "Regular expressions are specified with the preceding “~*” modifier (for case-insensitive matching)";
-        }
+    location ~* ^/regular_expression_case-insensitive_match {
+      default_type text/plain;
+      return 200 "Regular expressions are specified with the preceding “~*” modifier (for case-insensitive matching)";
+    }
 
 #//  ~  匹配正则表达式(区分大小写)
-        location ~ ^/regular_expression_case-sensitive_match {
-          default_type text/plain;
-          return 200 "the “~” modifier (for case-sensitive matching)";
-        }
+    location ~ ^/regular_expression_case-sensitive_match {
+      default_type text/plain;
+      return 200 "the “~” modifier (for case-sensitive matching)";
+    }
 
 
 #//  location在匹配规则之前都会对实际的url先做规范化处理,然后再对规范化处理后得出的uri做匹配操作
@@ -45,72 +46,72 @@
 #//  1. 解码形如'%XX'这种经过编码的文本
 #//  2. 解析路径中相对路径(如'.'或'..')
 #//  3. 将毗邻的多个斜线(如'///////')压缩为一个斜线(即'/')
-        location = /normalize/uri/ {
-          default_type text/plain;
-          return 200 "location = /normalize/uri/";
+    location = /normalize/uri/ {
+      default_type text/plain;
+      return 200 "location = /normalize/uri/";
 #// [root@client ~]# curl 'http://location.match.demo.com/////////////normalize/uri///////////////////////'
 #// [root@client ~]# curl 'http://location.match.demo.com/////////////normalize/uri/dir01/dir02/../..//////////////////////'
-        }
+    }
 
 #// 精确匹配
 #// 如果精确匹配一旦被找到，则search过程会立刻结束(If an exact match is found, the search terminates.)
 #// 如果某个固定的uri经常大量频繁的被客户端请求，则使用'='这种方式可以加速server端请求的处理过程
-        location = / {
-           default_type text/plain;
-           return 200 "location = /";
+    location = / {
+       default_type text/plain;
+       return 200 "location = /";
 #// 测试用例：
 #// [root@client ~]# curl http://location.match.demo.com/
 #// [root@client ~]# curl http://location.match.demo.com
-        }
+    }
 
-        location / {
-           default_type text/plain;
-           return 200 "location /";
+    location / {
+       default_type text/plain;
+       return 200 "location /";
 #// 测试用例：
 #// [root@client ~]# curl http://location.match.demo.com/aaaaaa
 #// [root@client ~]# curl http://location.match.demo.com/bbbbbb
 #// [root@client ~]# curl http://location.match.demo.com/cccccc/dddddd
 #// [root@client ~]# curl http://location.match.demo.com/path/to/other
 
-        }
+    }
 
-        location /documents/ {
-           default_type text/plain;
-           return 200 "location /documents/";
+    location /documents/ {
+       default_type text/plain;
+       return 200 "location /documents/";
 
 #// 测试用例：
 #// [root@client ~]# curl http://location.match.demo.com/aaaaa/documents/
 #// [root@client ~]# curl http://location.match.demo.com/documents/aaaaaa
-        }
+    }
 
 #// 区分大小写的正则匹配 (类似bash中的grep命令, 如：echo 'aaaa/pattern/aaaa'  | grep '/pattern')
-        location ~ /pattern {
-           default_type text/plain;
-           return 200 "location ~ /pattern/";
+    location ~ /pattern {
+       default_type text/plain;
+       return 200 "location ~ /pattern/";
 #// 测试用例：
 #// [root@client ~]#  curl http://location.match.demo.com/pattern
 #// [root@client ~]#  curl http://location.match.demo.com/patternaaaaaa
 #// [root@client ~]#  curl http://location.match.demo.com/pattern/aaaaaa
 #// [root@client ~]#  curl http://location.match.demo.com/bbbbbb/pattern/aaaaaa
-        }
+    }
 
 
 #// 效果有点类似于bash中对grep命令的这种使用: echo '/switchbreak/aaaaaaaaa' | grep -E '^/switchbreak/'
 #// ^~ 还有种类似于一些程序语言中switch语句块加了一条break语句的效果(即执行break后立即结束对其他后续语句的处理,
 #// 而^~会结束后续正则表达式的检查)
 #// If the longest matching prefix location has the “^~” modifier then regular expressions are not checked.
-        location ^~ /switchbreak/ {
-           default_type text/plain;
-           return 200 "location ^~ /switchbreak/";
+    location ^~ /switchbreak/ {
+       default_type text/plain;
+       return 200 "location ^~ /switchbreak/";
 #// 测试用例：
 #// [root@client ~]#  curl 'http://location.match.demo.com/switchbreak/'
 #// [root@client ~]#  curl 'http://location.match.demo.com/switchbreak/aaaa'
-        }
+    }
 
-        #// 不区分大小写的正则匹配
-        location ~* \.(gif|jpg|jpeg)$ {
-           #// return 200 'location ~* \.(gif|jpg|jpeg)$';  <==problem caused by the '$' sign
-           return 200 'location ~* \.(gif|jpg|jpeg)';
+    #// 不区分大小写的正则匹配
+    location ~* \.(gif|jpg|jpeg)$ {
+       #// return 200 'location ~* \.(gif|jpg|jpeg)$';  <==problem caused by the '$' sign
+       return 200 'location ~* \.(gif|jpg|jpeg)';
 #// 测试用例：
 #// [root@client ~]#  curl http://location.match.demo.com/documents/1.jpg
 #// [root@client ~]#  curl http://location.match.demo.com/aaaaaa.jpg
@@ -122,12 +123,12 @@
 #// [root@client ~]#  curl http://location.match.demo.com/aaaa.GIF
 #// [root@client ~]#  curl http://location.match.demo.com/aaaa.Gif
 
-        }
+    }
 
 
 #// ------------------------------------------------------------
 #// http://nginx.org/en/docs/http/ngx_http_core_module.html#location
-#// 特别注意：
+#// 特别注意：(一个很奇怪的nginx的特性)
 #//     针对proxy_pass, fastcgi_pass, uwsgi_pass, scgi_pass, memcached_pass,or grpc_pass,
 #//     prefix string是否带有结尾的斜线符号'/'是否区别的
 #//
@@ -138,27 +139,49 @@
 #//  but without the trailing slash, a permanent redirect with the code 301 will be returned to
 #//  the requested URI with the slash appended. If this is not desired,
 #//  an exact match of the URI and location could be defined like this:
+    location /user/ {
+      proxy_pass http://192.168.175.20;
+    }
 
-        location /user/ {
-          proxy_pass http://192.168.175.20;
-        }
-
-        location = /user {
-          proxy_pass http://192.168.175.20;
-        }
+    location = /user {
+      proxy_pass http://192.168.175.20;
+    }
 
 
 #// ------------------------------------------------------------
 
 #// TODO: add the demo about nested location
 #// https://xintron.se/code/nginx-nested-locations-and-pagination
-#// https://zakame.net/blog/2017/07/nginx-and-nested-locations.html
 #// https://stackoverflow.com/questions/34839823/nested-locations-in-nginx
 #// https://serverfault.com/questions/496371/nested-locations-nginx
 
+#// 一些参考；
+#// https://artfulrobot.uk/blog/untangling-nginx-location-block-matching-algorithm
+#// https://serverfault.com/questions/496371/nested-locations-nginx
+#// https://zakame.net/blog/2017/07/nginx-and-nested-locations.html
 
-
+    location     /foo { #//更详细信息见  https://artfulrobot.uk/blog/untangling-nginx-location-block-matching-algorithm
+        location ~ /fooX{
+           default_type text/plain;
+           return 200 'a.html';
+        }
+       default_type text/plain;
+       return 200 'xxxxxxxxxxxxxxxxxxx.html';
     }
+    location     /fo  {
+      location ~ /foo {
+         default_type text/plain;
+         return 200 'b.html';
+      }
+    }
+    location ~ /fooX{
+         default_type text/plain;
+         return 200 'c.html';
+    }
+
+
+
+}
 
 
 
