update  app/nginx/sites-available/proxy.reverse.demo01.com.conf

--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/proxy.reverse.demo01.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/proxy.reverse.demo01.com.conf
@@ -23,6 +23,11 @@ server {
         #//  此处 proxy_pass 的值后面没有append任何uri (如'/', '/path/to'),
         #//  所以这里仅是代理到后台服务器上的相同相同uri(这种效果感觉有点和root指令只提供一个基目录的效果类似)
         proxy_pass http://192.168.175.20;  #forward to: http://192.168.175.20/proxy_to_backend_server_but_not_change_original_client_uri
+
+        #// 小心和注意:
+        #// 对于这种在proxy端定义/uri, 然后由nginx转到后端 http://backendserver/uri 的方式，如果是简单的独立的资源(如图片,音频，视频文件等),
+        #// 应该不会出现什么问题，但如果是有相互依赖或相互链接引用的资源(如html,javascript,css等), 如果没有做相应的处理，
+        #// 可能会造成客户端浏览器无法加载被链接的资源的异常情况，这一点要小心和注意
     }
 
     location /proxy_to_backend_server_and_change_original_client_uri_to_new_uri {
