--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/phpfpm.fastcgi.demo01.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/phpfpm.fastcgi.demo01.com.conf
@@ -38,7 +38,7 @@ server {
 #//  [root@nginx7server ~]# /app/nginx/sbin/nginx -t
 #//  [root@nginx7server ~]# /app/nginx/sbin/nginx -s reload
 
-#// php-fpm 服务器端
+#// php-fpm 服务器端 (php-fpm的搭建见 https://github.com/yangsg/linux_training_notes/blob/master/nginx/nginx05_lnmp/readme.txt )
 #// [root@phpfpm7server ~]# mkdir -p /web/app/phpfpm.fastcgi.demo01.com
 #// [root@phpfpm7server ~]# vim /web/app/phpfpm.fastcgi.demo01.com/index.php
 #//       <?php
