--- a/mysql_mariadb/mysql_01_install/mysql_install_from_source_5.7/etc/my.cnf
+++ b/mysql_mariadb/mysql_01_install/mysql_install_from_source_5.7/etc/my.cnf
@@ -15,11 +15,11 @@
 # log_bin
 
 # These are commonly set, remove the # and set as required.
-# basedir = .....
-# datadir = .....
-# port = .....
-# server_id = .....
-# socket = .....
+basedir=/app/mysql
+datadir=/mydata/data
+port=3306
+server_id=136
+socket=/tmp/mysql.sock
 
 # Remove leading # to set options mainly useful for reporting servers.
 # The server defaults are faster for transactions and fast SELECTs.
