--- a/samba/sambaserver/etc/samba/smb.conf
+++ b/samba/sambaserver/etc/samba/smb.conf
@@ -3,35 +3,58 @@
 # Run 'testparm' to verify the config is correct after
 # you modified it.
 
+#[global]
+#	workgroup = SAMBA
+#	security = user
+#
+#	passdb backend = tdbsam
+#
+#	printing = cups
+#	printcap name = cups
+#	load printers = yes
+#	cups options = raw
+
 [global]
 	workgroup = SAMBA
 	security = user
 
 	passdb backend = tdbsam
 
-	printing = cups
-	printcap name = cups
-	load printers = yes
-	cups options = raw
+## 如下 4 行 配置 用于 禁用 printer feature 的版本
+## 参考:
+##     https://www.digrouz.com/mediawiki/index.php?title=HOWTO_disable_printing_support_(CUPS)_in_Samba
+##     https://serverfault.com/questions/207510/how-do-you-disable-smb-printing-support
+	load printers = no
+	printing = bsd
+	printcap name = /dev/null
+  disable spoolss = yes
 
-[homes]
-	comment = Home Directories
-	valid users = %S, %D%w%S
-	browseable = No
-	read only = No
-	inherit acls = Yes
+#[homes]
+#	comment = Home Directories
+#	valid users = %S, %D%w%S
+#	browseable = No
+#	read only = No
+#	inherit acls = Yes
 
-[printers]
-	comment = All Printers
-	path = /var/tmp
-	printable = Yes
-	create mask = 0600
-	browseable = No
+#[printers]
+#	comment = All Printers
+#	path = /var/tmp
+#	printable = Yes
+#	create mask = 0600
+#	browseable = No
 
-[print$]
-	comment = Printer Drivers
-	path = /var/lib/samba/drivers
-	write list = @printadmin root
-	force group = @printadmin
-	create mask = 0664
-	directory mask = 0775
+#[print$]
+#	comment = Printer Drivers
+#	path = /var/lib/samba/drivers
+#	write list = @printadmin root
+#	force group = @printadmin
+#	create mask = 0664
+#	directory mask = 0775
+
+[Secure]
+comment = secure share folder
+path = /samba_srv/secure
+valid users = @smbgrp
+writable = yes
+browsable = yes
+
