--- a/ftp/anonymous_ftp_server__config/etc/vsftpd/vsftpd.conf
+++ b/ftp/anonymous_ftp_server__config/etc/vsftpd/vsftpd.conf
@@ -9,6 +9,7 @@
 # capabilities.
 #
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
+## 开启匿名访问
 anonymous_enable=YES
 #
 # Uncomment this to allow local users to log in.
@@ -16,6 +17,7 @@ anonymous_enable=YES
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
+## 针对所有用户的上传权限
 write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
@@ -26,11 +28,26 @@ local_umask=022
 # has an effect if the above global write enable is activated. Also, you will
 # obviously need to create a directory writable by the FTP user.
 # When SELinux is enforcing check for SE bool allow_ftpd_anon_write, allow_ftpd_full_access
-#anon_upload_enable=YES
+##    注意：
+##      a. 确保匿名用户对本地目录拥有写权限
+##      b. 匿名用户上传时，不允许在数据根目录直接上传文件
+##      c. 不允许在匿名用户的数据根目录添加任何写权限，否则ftp会禁止匿名访问
+## 启用匿名用户上传文件的权限
+anon_upload_enable=YES
 #
 # Uncomment this if you want the anonymous FTP user to be able to create
 # new directories.
-#anon_mkdir_write_enable=YES
+## 启用匿名用户上传目录的权限
+anon_mkdir_write_enable=YES
+
+## 启用匿名用户其他写入操作(删除、重命名)
+anon_other_write_enable=YES
+
+## 保证其他匿名用户可正常下载文件
+anon_umask=022
+
+## 修改匿名用户默认的数据目录 (如果有需要的话, 注意, 如果启用了这该项, 还应该注意系统的文件系统本身的权限是否满足要求)
+## anon_root=/data/caiwu
 #
 # Activate directory messages - messages given to remote users when they
 # go into a certain directory.
