--- a/ftp/secure7ftp7server/etc/vsftpd/vsftpd.conf
+++ b/ftp/secure7ftp7server/etc/vsftpd/vsftpd.conf
@@ -9,13 +9,16 @@
 # capabilities.
 #
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
-anonymous_enable=YES
+## 禁用 匿名 登录
+anonymous_enable=NO
 #
 # Uncomment this to allow local users to log in.
 # When SELinux is enforcing check for SE bool ftp_home_dir
+## 允许 本地 登录
 local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
+## 允许文件系统的相关修改(如 upload, delete files)
 write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
@@ -98,7 +101,26 @@ xferlog_std_format=YES
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-#chroot_local_user=YES
+## 阻止 ftp users 访问 其 家目录 之外的文件
+chroot_local_user=YES
+
+## 指定 本地用户的 数据 根目录
+user_sub_token=$USER
+local_root=/home/$USER/ftp
+
+## 限定 被动模式 数据连接的 端口范围
+pasv_min_port=30000
+pasv_max_port=31000
+
+## 如下两行配置 可以 理解为 启动 白名单
+userlist_file=/etc/vsftpd/user_list
+userlist_deny=NO
+
+## 启用 ssl 功能
+rsa_cert_file=/etc/vsftpd/ssl/vsftpd.pem
+rsa_private_key_file=/etc/vsftpd/ssl/vsftpd.pem
+ssl_enable=YES
+
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd/chroot_list
