--- a/openvpn/01-openvpn-basic/etc/openvpn/server.conf
+++ b/openvpn/01-openvpn-basic/etc/openvpn/server.conf
@@ -75,14 +75,17 @@ dev tun
 # Any X509 key management system can be used.
 # OpenVPN can also use a PKCS #12 formatted key file
 # (see "pkcs12" directive in man page).
-ca ca.crt
-cert server.crt
-key server.key  # This file should be kept secret
+ca /etc/openvpn/server/ca.crt
+cert /etc/openvpn/server/vpnserver.crt
+key /etc/openvpn/server/vpnserver.key  # This file should be kept secret
 
 # Diffie hellman parameters.
 # Generate your own with:
 #   openssl dhparam -out dh2048.pem 2048
-dh dh2048.pem
+dh /etc/openvpn/server/dh.pem
+
+## 证书吊销列表
+crl-verify /etc/openvpn/server/crl.pem
 
 # Network topology
 # Should be subnet (addressing via IP)
@@ -98,7 +101,7 @@ dh dh2048.pem
 # Each client will be able to reach the server
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
-server 10.8.0.0 255.255.255.0
+server 10.8.0.0 255.255.255.0   # 注: 不能与内网现有的任何网段冲突
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
@@ -140,6 +143,7 @@ ifconfig-pool-persist ipp.txt
 # back to the OpenVPN server.
 ;push "route 192.168.10.0 255.255.255.0"
 ;push "route 192.168.20.0 255.255.255.0"
+push "route 0.0.0.0 0.0.0.0"  # 指定 client 端允许访问那些网段的主机(此例中允许其访问所有网段)
 
 # To assign specific IP addresses to specific
 # clients or if a connecting client has a private
@@ -189,7 +193,7 @@ ifconfig-pool-persist ipp.txt
 # (The OpenVPN server machine may need to NAT
 # or bridge the TUN/TAP interface to the internet
 # in order for this to work properly).
-;push "redirect-gateway def1 bypass-dhcp"
+push "redirect-gateway def1 bypass-dhcp"
 
 # Certain Windows-specific network settings
 # can be pushed to clients, such as DNS
@@ -199,6 +203,8 @@ ifconfig-pool-persist ipp.txt
 # DNS servers provided by opendns.com.
 ;push "dhcp-option DNS 208.67.222.222"
 ;push "dhcp-option DNS 208.67.220.220"
+push "dhcp-option DNS 8.8.8.8"  # 指定 client端使用的主 DNS, 此例中为 Google提供的免费DNS服务器: 主: 8.8.8.8, 备用: 8.8.4.4
+push "dhcp-option DNS 8.8.4.4"  # 指定 client端使用的备份 DNS
 
 # Uncomment this directive to allow different
 # clients to be able to "see" each other.
@@ -241,7 +247,8 @@ keepalive 10 120
 # a copy of this key.
 # The second parameter should be '0'
 # on the server and '1' on the clients.
-tls-auth ta.key 0 # This file is secret
+;tls-auth ta.key 0 # This file is secret
+tls-crypt /etc/openvpn/server/myvpn_shared_secret_key.tlsauth  #(增强安全性) 加密和认证 所有控制 信道的 packets. 比起 tls-auth, tls-crypt 增加了加密 TLS control channel的功能
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -254,8 +261,8 @@ cipher AES-256-CBC
 # Enable compression on the VPN link and push the
 # option to the client (v2.4+ only, for earlier
 # versions see below)
-;compress lz4-v2
-;push "compress lz4-v2"
+compress lz4-v2         # 启用服务器端在 vpn 链路 上的 lz4-v2 压缩功能, 该功能需要 openvpn v2.4+ 的支持
+push "compress lz4-v2"  # 同时将 lz4-v2 压缩功能的启用设置 推送给 client端, 该功能需要 openvpn v2.4+ 的支持
 
 # For compression compatible with older clients use comp-lzo
 # If you enable it here, you must also
@@ -271,8 +278,8 @@ cipher AES-256-CBC
 #
 # You can uncomment this out on
 # non-Windows systems.
-;user nobody
-;group nobody
+user nobody    # 在 初始化 之后 以 非特权user 'nobody' 运行
+group nobody   # 在 初始化 之后 以 非特权group 'nobody' 运行
 
 # The persist options will try to avoid
 # accessing certain resources on restart
@@ -294,7 +301,7 @@ status openvpn-status.log
 # while "log-append" will append to it.  Use one
 # or the other (but not both).
 ;log         openvpn.log
-;log-append  openvpn.log
+log-append  /var/log/openvpn.log   # 记录日志, 选项 log-append 用于每次启动 openvpn后 追加 log 信息, 而不是像选项 log 那样先 truncate 再写入
 
 # Set the appropriate level of log
 # file verbosity.
