--- a/openvpn/01-openvpn-basic/vpnclient/etc/openvpn/client.conf
+++ b/openvpn/01-openvpn-basic/vpnclient/etc/openvpn/client.conf
@@ -14,6 +14,13 @@
 # will be pulling certain config file directives
 # from the server.
 client
+# 如下 3 行 设置是为解决 centos7 作为 openvpn 客户端 的 pull dns 的问题 (linux作为客户端基本都存在这种问题)
+# 注: 这里没有使用
+# plugin openvpn-plugin-down-root.so  "/etc/openvpn/client.down" 以及 user nobody 和 group nobody 的设置,
+# 因为 实际测试 在 centos7 中 openvpn-plugin-down-root.so 并没有起效果(从而导致无法还原 DNS 设置)
+script-security 2
+up /etc/openvpn/client.up
+down /etc/openvpn/client.down
 
 # Use the same setting as you are using on
 # the server.
@@ -39,7 +46,7 @@ proto udp
 # The hostname/IP and port of the server.
 # You can have multiple remote entries
 # to load balance between the servers.
-remote my-server-1 1194
+remote 192.168.10.110 1194   # 指定 vpnserver 地址
 ;remote my-server-2 1194
 
 # Choose a random host from the remote
@@ -85,9 +92,9 @@ persist-tun
 # a separate .crt/.key file pair
 # for each client.  A single ca
 # file can be used for all clients.
-ca ca.crt
-cert client.crt
-key client.key
+ca /etc/openvpn/client/ca.crt
+cert /etc/openvpn/client/vpnclient01.crt
+key /etc/openvpn/client/vpnclient01.key
 
 # Verify server certificate by checking that the
 # certicate has the correct key usage set.
@@ -105,7 +112,8 @@ remote-cert-tls server
 
 # If a tls-auth key is used on the server
 # then every client must also have the key.
-tls-auth ta.key 1
+;tls-auth ta.key 1
+tls-crypt /etc/openvpn/client/myvpn_shared_secret_key.tlsauth  #(增强安全性) 加密和认证 所有控制 信道的 packets. 比起 tls-auth, tls-crypt 增加了加密 TLS control channel的功能
 
 # Select a cryptographic cipher.
 # If the cipher option is used on the server
@@ -114,6 +122,7 @@ tls-auth ta.key 1
 # negotiate AES-256-GCM in TLS mode.
 # See also the ncp-cipher option in the manpage
 cipher AES-256-CBC
+tls-version-min 1.2  # 设置 tls 的最低版本为 1.2 (因为其最低版本默认值为 1)
 
 # Enable compression on the VPN link.
 # Don't enable this unless it is also
